# MiniQMT-Protocol

./: AGENTS.md  README.md  pyproject.toml
src/miniqmt_protocol/: __init__.py  models.py
tests/: test_models.py
